apps/cortex-cicd/el-github-webhook-listener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '15'
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/name: github-webhook-listener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-webhook-listener
  name: el-github-webhook-listener
  namespace: cortex-cicd
  ownerReferences:
  - apiVersion: triggers.tekton.dev/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: EventListener
    name: github-webhook-listener
    uid: 421e9259-6019-4b03-b532-504039c60b0c
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/managed-by: EventListener
      app.kubernetes.io/part-of: Triggers
      eventlistener: github-webhook-listener
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/managed-by: EventListener
        app.kubernetes.io/name: github-webhook-listener
        app.kubernetes.io/part-of: Triggers
        eventlistener: github-webhook-listener
    spec:
      containers:
      - args:
        - --el-name=github-webhook-listener
        - --el-namespace=cortex-cicd
        - --port=8080
        - --readtimeout=5
        - --writetimeout=40
        - --idletimeout=120
        - --timeouthandler=30
        - --httpclient-readtimeout=30
        - --httpclient-keep-alive=30
        - --httpclient-tlshandshaketimeout=10
        - --httpclient-responseheadertimeout=10
        - --httpclient-expectcontinuetimeout=1
        - --is-multi-ns=false
        - --payload-validation=true
        - --cloudevent-uri=
        - --tls-cert=
        - --tls-key=
        image: ghcr.io/tektoncd/triggers/eventlistenersink-7ad1faa98cddbcb0c24990303b220bb8:v0.34.0@sha256:6af463bd78b8ce864cc89f961a4c604db297c1a5c375dd038519483b3f85541d
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: event-listener
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 65532
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: tekton-triggers-sa
      serviceAccountName: tekton-triggers-sa
      terminationGracePeriodSeconds: 30
