apps/cortex-cicd/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cortex-cicd
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
